--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite5.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
-    <title>Hold'em tool</title>
+    <title>HoldemTools</title>
   </head>
   <body class="">
     <div id="root"></div>
